# buslr

./: .gitignore  CMakeLists.txt  COPYING  README.md
etc/: buslrvars.sh.in
local/: Configure.example  Configure.sh
src/arrayfire/: CMakeLists.txt
src/audioread/: meta.yaml
src/bandmat/: meta.yaml
src/boost/: CMakeLists.txt
src/carfac/: CMakeLists.txt  build.cmake
src/f4de/: CMakeLists.txt  patch.txt
src/fastdtw/: meta.yaml
src/festvox/: CMakeLists.txt  build.sh  meta.yaml
src/flashlight/: CMakeLists.txt  patch.txt
src/gflags/: CMakeLists.txt
src/glog/: CMakeLists.txt
src/gloo/: CMakeLists.txt
src/googletest/: CMakeLists.txt
src/hts/: CMakeLists.txt  README.md  build.sh  meta.yaml
src/idiaptts/: CMakeLists.txt  build.sh  meta.yaml
src/intel/: CMakeLists.txt
src/irstlm/: CMakeLists.txt  patch.txt
src/kaldi/: CMakeLists.txt
src/kenlm/: CMakeLists.txt
src/liblbfgs/: CMakeLists.txt
src/libresample/: CMakeLists.txt
src/librosa/: meta.yaml
src/libssp/: CMakeLists.txt
src/locallib/: CMakeLists.txt
src/lube/: CMakeLists.txt
src/marian/: CMakeLists.txt
src/mecab/: CMakeLists.txt
src/mitlm/: CMakeLists.txt
src/nnmnkwii/: meta.yaml
src/nvidia/: CMakeLists.txt
src/onednn/: CMakeLists.txt
src/openfst/: CMakeLists.txt
src/pfile_utils/: CMakeLists.txt  patch.txt
src/pydub/: meta.yaml
src/pysptk/: meta.yaml
src/pyworld/: meta.yaml
src/quicknet/: CMakeLists.txt
src/resampy/: meta.yaml
src/sctk/: CMakeLists.txt  build.sh  meta.yaml  patch.txt
src/sklearn/: meta.yaml
src/soundfile/: meta.yaml
src/sph2pipe/: CMakeLists.txt  build.cmake
src/sptk/: CMakeLists.txt  meta.yaml
src/srilm/: CMakeLists.txt
src/stk/: CMakeLists.txt  patch.txt
src/tracter/: CMakeLists.txt
src/unisyn/: CMakeLists.txt  README.md  build.sh  meta.yaml
src/wav2letter/: CMakeLists.txt
src/wcad/: CMakeLists.txt
